Do not crash if real files have less lines than what the patch claims

BUG: 420771
FIXED-IN: 20.04.1